wrap fixed need tablet repsonsive

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -560,20 +560,23 @@ section {
 .persona-one,
 .persona-two,
 .persona-three {
-	box-shadow: inset 0 0 10px #777777;
+	/*	box-shadow: inset 0 0 10px #777777;*/
 	flex: 1;
+	text-align: center;
 }
-
 
 .persona-three {
-	flex: 100%;
+	text-align: center;
+	max-width: 34.5rem;
+	margin: 0 auto;
 }
+
 
 .persona-name {
 	color: #B30000;
 	font-family: 'Zilla Slab', serif;
 	font-size: 3rem;
-	text-align: left;
+	text-align: center;
 	text-transform: capitalize;
 	padding-bottom: 1rem;
 	padding-top: 2rem;
@@ -1042,7 +1045,6 @@ img .wireframes {
 		font-size: 2.1rem;
 		padding: 0 2rem;
 	}
-
 
 	.charts {
 		padding-bottom: 3rem;
